<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="@string/app_titulo"
        app:titleTextColor="@color/design_default_color_on_primary" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextEscuchado"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:hint="@string/presiona_boton_literal"
            android:inputType="textMultiLine"
            android:orientation="vertical" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="0"
            android:background="?android:attr/listDivider" />

        <EditText
            android:id="@+id/editTextTraducido"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:hint="@string/resultado_traducido_aqui_literal"
            android:inputType="textMultiLine"
            android:orientation="vertical" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0">

            <Spinner
                android:id="@+id/spinnerIdiomaReconocido"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start" />

            <Spinner
                android:id="@+id/spinnerIdiomaDisponible"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end" />

        </LinearLayout>

        <Button
            android:id="@+id/buttonTraducir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/traducir_literal"
            app:cornerRadius="0dp" />

        <Button
            android:id="@+id/buttonReproducir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/reproducir_literal"
            app:cornerRadius="0dp" />

        <Switch
            android:id="@+id/switchAuto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="0"
            android:text="@string/automaticamente_literal" />

        <ImageButton
            android:id="@+id/imageButtonGrabar"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:layout_weight="0"
            android:adjustViewBounds="false"
            android:background="@drawable/imagebuttonroundbackground"

            android:cropToPadding="false"
            android:foregroundGravity="center|center_horizontal"
            app:srcCompat="@drawable/baseline_mic_24"
            app:tint="?android:attr/colorEdgeEffect" />

    </LinearLayout>

</LinearLayout>